After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705475 - goom: negotiation fails when sink has ANY caps
goom: negotiation fails when sink has ANY caps
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.10
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-05 06:54 UTC by Sjoerd Simons
Modified: 2013-08-05 14:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (767 bytes, patch)
2013-08-05 06:54 UTC, Sjoerd Simons
committed Details | Review

Description Sjoerd Simons 2013-08-05 06:54:45 UTC
Created attachment 250826 [details] [review]
proposed patch

$ gst-launch-1.0 audiotestsrc ! goom ! fakesink Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_int: assertion `IS_MUTABLE (structure)' failed

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_int: assertion `IS_MUTABLE (structure)' failed

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_fraction: assertion `IS_MUTABLE (structure)' failed

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_buffer_pool_config_set_params: assertion `caps == NULL || gst_caps_is_fixed (caps)' failed

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_int: assertion `IS_MUTABLE (structure)' failed

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_int: assertion `IS_MUTABLE (structure)' failed

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_fraction: assertion `IS_MUTABLE (structure)' failed

(gst-launch-1.0:30968): GStreamer-CRITICAL **: gst_buffer_pool_config_set_params: assertion `caps == NULL || gst_caps_is_fixed (caps)' failed
Pipeline is PREROLLED ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock


Fixed in attached patch
Comment 1 Tim-Philipp Müller 2013-08-05 11:51:26 UTC
Comment on attachment 250826 [details] [review]
proposed patch

Looks good. Please prefix commit message summary line with 'goom:' and add bug uri.
Comment 2 Sjoerd Simons 2013-08-05 13:34:23 UTC
commit d14d4c436ce8d946997c927c61a4da9001cff936
Author: Sjoerd Simons <sjoerd.simons@collabora.co.uk>
Date:   Mon Aug 5 08:49:50 2013 +0200

    goom: Ensure src caps are writable
    
    In some cases the src caps determined by goom weren't writable, causing
    a bunch of assertion failures and failed caps. Fixed by always
    explicitely making the caps writable
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705475